# aegis-risk

./: .gitignore  Makefile  README.md  docker-compose.yml
infra/: init-databases.sql  localstack-init.sh
proto/: common.proto  llm_service.proto  ml_service.proto  notification.proto  risk_engine.proto  transaction.proto
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  dependencies.py  main.py
services/api-gateway/app/grpc_clients/: transaction_client.py
services/api-gateway/app/mappers/: client_mapper.py
services/api-gateway/app/middleware/: correlation.py  rate_limit.py
services/api-gateway/app/middleware/auth/: cognito.py
services/api-gateway/app/routers/: auth.py  transactions.py
services/llm-service/: Dockerfile  pyproject.toml
services/ml-service/: Dockerfile  pyproject.toml
services/notification-service/: Dockerfile  pyproject.toml
services/risk-engine-service/: Dockerfile  pyproject.toml
services/risk-engine-service/alembic/: env.py
services/risk-engine-service/alembic/versions/: aee18c6aad26_create_initial_risk_tables.py
services/risk-engine-service/app/: config.py  main.py  worker.py
services/risk-engine-service/app/db/: session.py
services/risk-engine-service/app/engine/: orchestrator.py  scorer.py
services/risk-engine-service/app/engine/rules/: __init__.py  account_age.py  base_rule.py  device_fingerprint.py  failed_burst.py  geo_mismatch.py  high_value.py  unusual_hour.py  velocity.py
services/risk-engine-service/app/grpc_clients/: llm_client.py  ml_client.py
services/risk-engine-service/app/grpc_server/: __init__.py  interceptors.py  servicer.py
services/risk-engine-service/app/mappers/: risk_mapper.py
services/risk-engine-service/app/models/: __init__.py  account_profile.py  risk_result.py
services/risk-engine-service/app/repositories/: account_profile_repo.py  risk_repo.py
services/transaction-service/: Dockerfile  pyproject.toml
services/transaction-service/app/: config.py  main.py
services/transaction-service/app/db/: base.py  session.py
services/transaction-service/app/grpc_clients/: risk_engine_client.py
services/transaction-service/app/grpc_server/: interceptors.py  servicer.py
services/transaction-service/app/mappers/: client_mapper.py  transaction_mapper.py
services/transaction-service/app/models/: transaction.py
services/transaction-service/app/queue/: sqs_publisher.py
services/transaction-service/app/repo/: transaction_repo.py
services/transaction-service/app/services/: idempotency_service.py  transaction_service.py
services/transaction-service/tests/: conftest.py
services/transaction-service/tests/integration/: conftest.py  test_transaction_flow.py  test_transaction_repo.py
services/transaction-service/tests/unit/: conftest.py  test_idempotency_service.py  test_servicer.py  test_transaction_mapper.py  test_transaction_service.py
shared/aegis_shared/: __init__.py  enums.py  exceptions.py
shared/aegis_shared/schemas/: audit.py  auth.py  risk.py  transaction.py  webhook.py
shared/aegis_shared/utils/: dependencies.py  logging.py  redis.py  sql_logging.py  sqs.py  tracing.py
